Fix white space at top of page for desktop view Home Page

--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -1,5 +1,5 @@
 .container {
-  height: 40px;
+  height: 43px;
   width: 150px;
   background-color: white;
   color: black;
@@ -13,7 +13,7 @@
 }
 
 .text {
-  padding-top: 8px;
+  padding-top: 9px;
   color: #3B3B3B;
   font-weight: 500;
 }
